Added logout
Added logout function
Updated jsonify to json.dumps
removed unnecessary file
